[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dayblog"
version = "0.2.0"
description = "Notion 일기 → Hugo 블로그 발행 파이프라인 (self-dogfood)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "sunjin12", email = "sunjin12333@gmail.com" }]
keywords = ["notion", "hugo", "blog", "claude-code"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0",
    "notion-client>=2.2",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dayblog", "src/dayblog_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "CLAUDE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
